--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">CurrencyConverter</string>
+
+    <string-array name="country_arrays">
+        <item>BDT</item>
+        <item>USD</item>
+        <item>BGN</item>
+        <item>BRL</item>
+        <item>CAD</item>
+        <item>CHF</item>
+        <item>INR</item>
+    </string-array>
 </resources>
